Define social icon classes and fix tumblr icon spacing

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -402,6 +402,9 @@ button, a.button
     height: 26px
     width: 26px
 
+    &.tumblr-icon
+      width: 16px
+
   &:hover, &:focus
     fill: $links-rollover-color
 
